--- a/Casanova/Casanova/TopicHeaderView.xib
+++ b/Casanova/Casanova/TopicHeaderView.xib
@@ -31,14 +31,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RnQ-BR-wm8">
-                    <rect key="frame" x="24" y="7" width="440" height="64.5"/>
+                    <rect key="frame" x="24" y="7" width="440" height="59.5"/>
                     <string key="text">Do you agree or disagree the statement that we should let children use the computers or other electronic devices as early as they can?</string>
                     <fontDescription key="fontDescription" name="Merriweather-Regular" family="Merriweather" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ggY-Pv-14P" customClass="TagListView" customModule="TagListView">
-                    <rect key="frame" x="24" y="77" width="440" height="88.5"/>
+                    <rect key="frame" x="24" y="72" width="440" height="93.5"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="color" keyPath="textColor">
                             <color key="value" red="0.29411764709999999" green="0.80392156859999997" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -113,6 +113,7 @@
                 <constraint firstItem="vbj-wv-L3x" firstAttribute="leading" secondItem="0mK-r5-Koo" secondAttribute="trailing" constant="10" id="PJX-7n-MCm"/>
                 <constraint firstItem="0mK-r5-Koo" firstAttribute="leading" secondItem="uPE-n9-04y" secondAttribute="trailing" constant="10" id="TRl-Bh-OS2"/>
                 <constraint firstAttribute="bottom" secondItem="uPE-n9-04y" secondAttribute="bottom" constant="10" id="UcD-4A-Nlg"/>
+                <constraint firstItem="vbj-wv-L3x" firstAttribute="bottom" secondItem="0mK-r5-Koo" secondAttribute="bottom" id="X8c-Da-peD"/>
                 <constraint firstItem="RnQ-BR-wm8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="24" id="adg-9Q-Btb"/>
                 <constraint firstItem="vbj-wv-L3x" firstAttribute="centerY" secondItem="0mK-r5-Koo" secondAttribute="centerY" id="b5N-Vn-pAM"/>
                 <constraint firstItem="Xxk-dW-tRM" firstAttribute="leading" secondItem="5AC-Gy-1Uo" secondAttribute="trailing" constant="10" id="bvQ-id-oP4"/>
