--- a/Casanova/Casanova/PostTextView.xib
+++ b/Casanova/Casanova/PostTextView.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -14,6 +15,7 @@
                 <outlet property="placeholderLabel" destination="P6b-u9-YnJ" id="nm3-3r-wEc"/>
                 <outlet property="postButton" destination="fS8-xb-Vo1" id="sRh-dj-Pn9"/>
                 <outlet property="textView" destination="TvH-35-EAd" id="4Jf-IH-VWd"/>
+                <outlet property="toggleButton" destination="vzE-xA-glE" id="IBQ-5i-3jq"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -24,9 +26,6 @@
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="TvH-35-EAd">
                     <rect key="frame" x="24" y="15" width="393" height="54"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="54" id="Lqz-To-hwa"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
@@ -47,10 +46,22 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vzE-xA-glE">
+                    <rect key="frame" x="24" y="77" width="26" height="26"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="26" id="8qq-1f-hEe"/>
+                        <constraint firstAttribute="height" constant="26" id="J2N-b5-2Ph"/>
+                    </constraints>
+                    <state key="normal" image="expand"/>
+                    <connections>
+                        <action selector="toggleButtonTapped:" destination="-1" eventType="touchUpInside" id="3DD-i6-eUw"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="fS8-xb-Vo1" secondAttribute="bottom" constant="12" id="2eu-Dc-PZx"/>
+                <constraint firstItem="vzE-xA-glE" firstAttribute="top" secondItem="fS8-xb-Vo1" secondAttribute="top" id="Aq1-oU-ADw"/>
                 <constraint firstItem="fS8-xb-Vo1" firstAttribute="trailing" secondItem="TvH-35-EAd" secondAttribute="trailing" id="F4A-v0-RXQ"/>
                 <constraint firstItem="TvH-35-EAd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="24" id="JKv-Og-ES1"/>
                 <constraint firstItem="TvH-35-EAd" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="VdD-a8-G44"/>
@@ -58,9 +69,13 @@
                 <constraint firstItem="P6b-u9-YnJ" firstAttribute="leading" secondItem="TvH-35-EAd" secondAttribute="leading" constant="13" id="gyN-Sm-ZsH"/>
                 <constraint firstAttribute="trailing" secondItem="TvH-35-EAd" secondAttribute="trailing" constant="24" id="iVv-eh-da3"/>
                 <constraint firstItem="fS8-xb-Vo1" firstAttribute="top" secondItem="TvH-35-EAd" secondAttribute="bottom" constant="7.4000000000000004" id="pt8-UI-xBH"/>
+                <constraint firstItem="vzE-xA-glE" firstAttribute="leading" secondItem="TvH-35-EAd" secondAttribute="leading" id="s4W-Gy-Dfl"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-148" y="51"/>
+            <point key="canvasLocation" x="-343" y="4"/>
         </view>
     </objects>
+    <resources>
+        <image name="expand" width="100" height="100"/>
+    </resources>
 </document>
